--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
           <div class="featured-image">
             <div class="image">
-                <img src="piw.jpg" alt="avatar">
+                <img src="ini.JPG" alt="avatar">
             </div>
           </div>
           <div class="scroll-icon-box">
